<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">464蓝桥</string>
    <string name="ClatAddr">CLAT 地址</string>
    <string name="CLATSwitch">CLAT 开关</string>
    <string name="WIFIStatus">Wi-Fi 状态</string>
    <string name="LastMessage">程序信息</string>
    <string name="BinaryStatus">程序状态</string>
    <string name="IPv6Address">IPv6 地址</string>
    <string name="IPv4Address">IPv4 地址</string>
    <string name="ClatStatus">无线接口</string>
    <string name="StdoutLabel">输出</string>
    <string name="StderrLabel">错误信息</string>
    <string name="update">升级</string>
    <string name="newapi">NewApi</string>
    
    <string name="logo">logo</string>
    
    <string name="login_tv">登录</string>
    <string name="regist_tv">注册</string>
    <string name="index_looks_tv">网络信息</string>
    <string name="index_looks_info_tv">查看当前各项网络信息</string>
    <string name="index_shopping_tv">流量监控</string>
    <string name="index_shopping_info_tv">显示通过蓝桥的进出流量</string>
    <string name="index_show_tv">功能介绍</string>
    <string name="index_show_info_tv">显示程序帮助信息</string>
    <string name="index_search_tv">程序更新</string>
    <string name="index_search_info_tv">手动更新程序</string>

</resources>