<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    tools:context=".MainActivity" >

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
	    
	<TextView
	    android:id="@+id/TetherStatusLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/TetherStatusLabel2"
	    android:layout_below="@+id/TetherStatusLabel2"

	    android:layout_marginTop="20dp"
	    android:text="@string/TetherStatus"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
	<!--  	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="20dp"-->

    <TextView
        android:id="@+id/TetherStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_alignRight="@+id/on"
        android:layout_alignBottom="@+id/TetherStatusLabel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <!-- android:layout_alignBaseline="@+id/TetherStatusLabel"
        android:layout_alignBottom="@+id/TetherStatusLabel" -->
    
    <TextView
	    android:id="@+id/TetherStatusLabel2"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
	    android:layout_marginTop="20dp"
        android:singleLine="true"
	    android:text="CLAT 开关"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
    
    	    <!--android:textColor="#000000"-->

    <org.slipbtn.SlipButton
        android:id="@+id/on"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_toRightOf="@id/TetherStatusLabel2"
         
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
            />

	<TextView
	    android:id="@+id/ClatStatusLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/TetherStatusLabel"
	    android:layout_below="@+id/TetherStatusLabel"
	    android:layout_marginTop="20dp"
	    android:text="@string/ClatStatus"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ClatStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TetherStatus"
        android:layout_alignBottom="@+id/ClatStatusLabel"
        
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <!-- android:layout_alignParentRight="true"
        android:layout_marginRight="20dp" -->
    
    <TextView
        android:id="@+id/WIFIStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ClatStatusLabel"
        android:layout_below="@+id/ClatStatusLabel"
        android:layout_marginTop="20dp"
        android:text="@string/WIFIStatus"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/WIFIStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/WIFIStatusLabel"
        android:layout_alignRight="@+id/ClatStatus"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/IPv4AddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/WIFIStatusLabel"
        android:layout_below="@+id/WIFIStatusLabel"
        android:layout_marginTop="20dp"
        android:text="@string/IPv4Address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/IPv4Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/IPv4AddressLabel"
        android:layout_alignRight="@+id/WIFIStatus"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
   	<TextView
   	    android:id="@+id/IPv6AddressLabel"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignLeft="@+id/IPv4AddressLabel"
   	    android:layout_below="@+id/IPv4AddressLabel"
   	    android:layout_marginTop="20dp"
   	    android:text="@string/IPv6Address"
   	    android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/IPv6Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/IPv6AddressLabel"
        android:layout_below="@+id/IPv6AddressLabel"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />
	
    <TextView
        android:id="@+id/LastMessageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/IPv6Address"
        android:layout_below="@+id/IPv6Address"
        android:layout_marginTop="20dp"
        android:text="@string/LastMessage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/LastMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LastMessageLabel"
        android:layout_below="@+id/LastMessageLabel"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/BinaryStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LastMessage"
        android:layout_below="@+id/LastMessage"
        android:layout_marginTop="20dp"
        android:text="@string/BinaryStatus"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
	<TextView
        android:id="@+id/BinaryStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BinaryStatusLabel"
        android:layout_below="@+id/BinaryStatusLabel"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/StdoutLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/BinaryStatus"
	    android:layout_alignLeft="@+id/BinaryStatus"
	    android:layout_marginTop="20dp"
	    android:text="@string/StdoutLabel"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/Stdout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/StdoutLabel"
	    android:layout_alignLeft="@+id/StdoutLabel"
	    android:layout_marginTop="20dp"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/StderrLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/Stdout"
	    android:layout_alignLeft="@+id/Stdout"
	    android:layout_marginTop="20dp"
	    android:text="@string/StderrLabel"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/Stderr"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/StderrLabel"
	    android:layout_alignLeft="@+id/StderrLabel"
	    android:layout_marginTop="20dp"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
			
</RelativeLayout>	    
</ScrollView>